Nest divs to prevent input groups from changing size on small screens

--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,7 @@
     text-align: center;
 }
 .disclaimer {
+    padding-top: 2em;
     font-size: 70%;
     color: #666;
 }
